--- a/src/components/DayCard/DayCard.css
+++ b/src/components/DayCard/DayCard.css
@@ -20,3 +20,12 @@
   background-size: contain;
   background-repeat: no-repeat;
 }
+
+.dayCard {
+  width: 100%;
+  margin-top: 20px;
+}
+
+#dayCard {
+  margin-top: 20px;
+}
