--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+* {
+  margin-right: 0;
+  margin-left: 0;
+  padding-left: 0;
+  padding-right: 0;
+}
+
 #appDaycard {
   display: flex;
   justify-content: center;
@@ -20,14 +27,14 @@ input[type="search"]:focus {
 }
 
 /* Style the search button */
-button[type="submit"] {
+/* button[type="submit"] {
   background-color: blue;
   color: white;
   border: none;
   padding: 10px;
   font-size: 16px;
   cursor: pointer;
-}
+} */
 
 #loading-screen {
   position: fixed;
@@ -45,4 +52,24 @@ button[type="submit"] {
 #loading-screen img {
   width: 50px;
   height: 50px;
+}
+
+#backgroundContainer {
+  background-image: url("https://i.pinimg.com/736x/ab/11/77/ab11777c199296b1e63f36cb2d6dde85.jpg");
+  background-repeat: no-repeat;
+  background-size: stretch;
+  width: auto;
+  height: 100vh;
+  /* margin-left: 0 !important;
+  margin-right: 0 !important; */
+}
+
+.grid-gutter-wiidth {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
+
+.gutters {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
 }
