--- a/src/components/DayCard/DayCard.css
+++ b/src/components/DayCard/DayCard.css
@@ -29,3 +29,10 @@
 #dayCard {
   margin-top: 20px;
 }
+
+.Clouds {
+  width: 50px;
+  height: 50px;
+  background-image: url("./rainCloud.png");
+  background-size: cover;
+}
