--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 }
 
 .container {
-  --bs-gutter-x: 0;
+  --bs-gutter-x: 0 !important;
   padding-right: calc(var(--bs-gutter-x) * 0) !important;
   padding-left: calc(var(--bs-gutter-x) * 0) !important;
   margin-right: 0 !important;
@@ -57,6 +57,12 @@ input[type="search"]:focus {
   z-index: 9999;
 }
 
+.hoverEffect:hover {
+  transition: 0.5s;
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
 #loading-screen img {
   width: 50px;
   height: 50px;
@@ -67,6 +73,8 @@ input[type="search"]:focus {
   background-repeat: no-repeat;
   background-size: cover;
   height: 1000px;
+  width: 100vw !important;
+  min-width: 375px !important;
 
   /* margin-left: 0 !important;
   margin-right: 0 !important; */
