--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 * {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Roboto", sans-serif;
   margin-right: 0;
   margin-left: 0;
   padding-left: 0;
